--- a/portal/src/main/webapp/app/template/business.html
+++ b/portal/src/main/webapp/app/template/business.html
@@ -45,7 +45,7 @@
 
     <div class="row">
         <div class="col-xs-12" ng-repeat="x in businessList" style="margin-top: 48px;">
-            <img class="img-responsive" ng-src="{{ctx + x.src2}}">
+            <img class="img-responsive" ng-src="{{x.src2}}">
 
             <h3 class="col-xs-10 col-xs-offset-2" ng-bind="x.subTitle"></h3>
             <h4 class="col-xs-10 col-xs-offset-2" style="line-height: 28px;" ng-bind="x.content"></h4>
