--- a/portal/src/main/webapp/app/template/intro.html
+++ b/portal/src/main/webapp/app/template/intro.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12" style="background-color: #f2f2f2;">
         <div class="container" style="padding: 20px 0;">
-            <div><img src="../../static/images/i_1.png"></div>
+            <div><img src="static/images/i_1.png"></div>
             <h4>上海交大慧谷信息产业股份有限公司</h4>
 
             <p>上海交大慧谷信息产业股份有限公司创立于1998年5月4日，是由<a href="http://www.sjtu.edu.cn/" target="_blank">上海交通大学</a>、上海科技投资有限公司、上海新徐汇（集团）有限公司等共同出资发起设立的股份有限公司。2002年7月，公司在香港<a
@@ -21,7 +21,7 @@
     <div class="col-xs-12">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6"><img class="img-responsive" src="../../static/images/i_2.png"></div>
+                <div class="col-xs-6"><img class="img-responsive" src="static/images/i_2.png"></div>
                 <div class="col-xs-6">
 
                     <dl class="dl-1">
