--- a/portal/src/main/webapp/app/template/la.html
+++ b/portal/src/main/webapp/app/template/la.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="col-xs-12" style="background-color: #f8f8f8;">
         <div class="container">
-            <img class="img-responsive" src="../../static/images/l_1.png">
+            <img class="img-responsive" src="static/images/l_1.png">
         </div>
     </div>
 
     <div class="col-xs-12">
         <div class="container" style="border-bottom: 1px solid #cccccc;">
-            <img class="img-responsive" src="../../static/images/l_2.png">
+            <img class="img-responsive" src="static/images/l_2.png">
         </div>
     </div>
 
