--- a/portal/src/main/webapp/app/template/home.html
+++ b/portal/src/main/webapp/app/template/home.html
@@ -75,7 +75,7 @@
         <div class="col-xs-6" ng-repeat="x in businessList">
             <div class="box-3">
                 <section ng-style="{'background-image': 'url('+x.src+')'}">
-                    <a ng-href="{{x.url}}">
+                    <a ui-sref="{{'business.column'}}({columnId:x.id})">
                         <div>
                             <span class="title" ng-bind="x.title"></span>
                             <span class="sub-title" ng-bind="x.titleEn"></span>
