--- a/portal/src/main/webapp/app/template/business-column.html
+++ b/portal/src/main/webapp/app/template/business-column.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-show="showColumn">
     <div class="row news-column">
         <div class="col-sm-6 col-md-6" ng-repeat="x in contentList">
             <section>
@@ -12,3 +12,4 @@
         </div>
     </div>
 </div>
+<ui-view></ui-view>
