--- a/portal/src/main/webapp/app/template/intro.html
+++ b/portal/src/main/webapp/app/template/intro.html
@@ -21,7 +21,10 @@
     <div class="col-xs-12">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6"><img class="img-responsive" src="static/images/i_2.png"></div>
+                <div class="col-xs-6">
+                    <img class="img-responsive" src="static/images/i_2.png">
+                    <img class="img-responsive" src="static/images/partner.png" style="margin-top: 100px;">
+                </div>
                 <div class="col-xs-6">
 
                     <dl class="dl-1">
