--- a/portal/src/main/webapp/app/template/contact.html
+++ b/portal/src/main/webapp/app/template/contact.html
@@ -4,7 +4,7 @@
             <section class="map">
                 <h3>我们在这里</h3>
                 <small>We are here!</small>
-                <img class="img-responsive img-rounded" src="static/images/map.png">
+                <img class="img-responsive img-rounded" src="static/images/map.jpg">
             </section>
         </div>
 
@@ -15,32 +15,32 @@
                 <div class="row">
                     <div class="col-xs-4">
                         <div class="col-xs-6">
-                            <img class="img-responsive img-rounded" src="static/images/c_1.png">
+                            <img class="img-responsive img-rounded" src="static/images/c_1.jpg">
                         </div>
                         <div class="col-xs-6">
                             <h4>业务咨询</h4>
                             <small>Business Consulting</small>
-                            <img src="static/images/qq.png">
+                            <img src="static/images/qq.jpg">
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="col-xs-6">
-                            <img class="img-responsive img-rounded" src="static/images/c_2.png">
+                            <img class="img-responsive img-rounded" src="static/images/c_2.jpg">
                         </div>
                         <div class="col-xs-6">
                             <h4>投诉建议</h4>
                             <small>Complaints Proposals</small>
-                            <img src="static/images/qq.png">
+                            <img src="static/images/qq.jpg">
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="col-xs-6">
-                            <img class="img-responsive img-rounded" src="static/images/c_3.png">
+                            <img class="img-responsive img-rounded" src="static/images/c_3.jpg">
                         </div>
                         <div class="col-xs-6">
                             <h4>在线招聘</h4>
                             <small>Online Recruiting</small>
-                            <img src="static/images/qq.png">
+                            <img src="static/images/qq.jpg">
                         </div>
                     </div>
                 </div>
