--- a/portal/src/main/webapp/app/template/home.html
+++ b/portal/src/main/webapp/app/template/home.html
@@ -10,7 +10,7 @@
             </h3>
 
             <div class="box-0">
-                <div><img src="static/images/20140711103143.png"></div>
+                <div><img src="static/images/20140711103143.jpg"></div>
 
                 <p>上海交大慧谷信息产业股份有限公司创立于1998年5月4日，是由<a href="http://www.sjtu.edu.cn/" target="_blank">上海交通大学</a>、上海科技投资有限公司、上海新徐汇（集团）有限公司等共同出资发起设立的股份有限公司。2002年7月，公司在香港<a
                         href="http://gem.ednews.hk/company/tc_default.htm?ref=0%3A" target="_blank">创业板</a>上市。公司集科研、生产、经营于一体，主要从事计算机网络与网络安全集成、应用软件开发、楼宇智能化系统集成，以及IT产品的代理销售等。
