中英文切换

--- a/portal/src/main/webapp/static/styles/app.css
+++ b/portal/src/main/webapp/static/styles/app.css
@@ -71,6 +71,10 @@ a:hover {
     border-radius: 0;
 }
 
+.navbar-index .navbar-nav {
+    margin: 0 !important;
+}
+
 .navbar-index .navbar-nav > li {
     float: left;
 }
