--- a/portal/src/main/webapp/app/template/news.html
+++ b/portal/src/main/webapp/app/template/news.html
@@ -5,7 +5,7 @@
                 <section>
                     <h4 ng-bind="roll.title"></h4>
                 <span>
-                    <a ng-href="#/news/column/101" class="txt-blue">{{roll.contentColumn.title}}</a> &nbsp;&nbsp;&nbsp;&nbsp;{{roll.eventTime|date:'yyyy-MM-dd HH:mm'}}&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a ng-href="#/news" class="txt-blue">{{roll.contentColumn.title}}</a> &nbsp;&nbsp;&nbsp;&nbsp;{{roll.eventTime|date:'yyyy-MM-dd HH:mm'}}&nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
 
                     <p ng-bind="roll.title"></p>
