--- a/portal/src/main/webapp/app/template/business-column.html
+++ b/portal/src/main/webapp/app/template/business-column.html
@@ -10,6 +10,7 @@
                 <b></b>
             </section>
         </div>
+        <label class="empty" ng-show="contentList.length==0">暂无数据</label>
     </div>
 </div>
 <div ui-view></div>
