--- a/portal/src/main/webapp/app/template/intro.html
+++ b/portal/src/main/webapp/app/template/intro.html
@@ -23,7 +23,6 @@
             <div class="row">
                 <div class="col-xs-6">
                     <img class="img-responsive" src="static/images/i_2.jpg">
-                    <img class="img-responsive" src="static/images/partner.jpg" style="margin-top: 100px;">
                 </div>
                 <div class="col-xs-6">
 
@@ -36,6 +35,11 @@
                         <dt><span>软件著作权</span></dt>
                         <dd ng-repeat="x in sc2List">{{x.text}}</dd>
                     </dl>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <img class="img-responsive" src="static/images/partner.jpg" style="margin-top: 100px;">
                 </div>
             </div>
         </div>
