--- a/portal/src/main/webapp/app/template/news.html
+++ b/portal/src/main/webapp/app/template/news.html
@@ -26,5 +26,14 @@
                 <p ng-bind="x.title"></p>
             </section>
         </div>
+
+        <div class="col-xs-12">
+            <label class="empty" ng-show="contentList.length==0">暂无数据</label>
+
+            <label ng-show="!loading&&!complete" ng-click="fetchContentList()" class="btn btn-block btn-more"> 加载更多 </label>
+            <label ng-show="loading" class="btn btn-block btn-more disabled"><i class="fa fa-spin fa-refresh fa-fw"></i> 正在加载，请稍候... </label>
+
+        </div>
+
     </div>
 </div>
