--- a/portal/src/main/webapp/app/template/home.html
+++ b/portal/src/main/webapp/app/template/home.html
@@ -39,25 +39,25 @@
         <div class="col-xs-6">
             <div class="box-2">
                 <i class="fa fa-bar-chart-o fa-2x txt-green"></i>
-                <a>新闻动态</a>
+                <a href="#/news">新闻动态</a>
             </div>
         </div>
         <div class="col-xs-6">
             <div class="box-2">
                 <i class="fa fa-comment-o fa-2x txt-red"></i>
-                <a>上市公告</a>
+                <a href="#/la">上市公告</a>
             </div>
         </div>
-        <div class="col-xs-6" >
-            <div class="box-1" ng-repeat="x in noticeList1">
-                <label ng-bind="x.eventTime"></label>
-                <a ng-bind="x.title"></a>
+        <div class="col-xs-6">
+            <div class="box-1" ng-repeat="x in contentList1">
+                <label ng-bind="x.eventTime|date:'yyyy-MM-dd HH:mm'"></label>
+                <a href="#/news/{{x.id}}" ng-bind="x.title"></a>
             </div>
         </div>
-        <div class="col-xs-6" >
-            <div class="box-1" ng-repeat="x in noticeList2">
-                <label ng-bind="x.eventTime"></label>
-                <a ng-bind="x.title"></a>
+        <div class="col-xs-6">
+            <div class="box-1" ng-repeat="x in contentList2">
+                <label ng-bind="x.eventTime|date:'yyyy-MM-dd HH:mm'"></label>
+                <a href="content/attachment/{{x.id}}" target="_blank" ng-bind="x.title"></a>
             </div>
         </div>
     </div>
