--- a/portal/src/main/webapp/app/template/la.html
+++ b/portal/src/main/webapp/app/template/la.html
@@ -14,12 +14,17 @@
     <div class="col-xs-12">
         <div class="container">
             <ul class="list-1">
-                <li ng-repeat="x in noticeList">
+                <li ng-repeat="x in contentList">
                     <i class="fa fa-file-pdf-o"></i>
                     <span ng-bind="x.eventTime|date:'yyyy-MM-dd HH:mm'"></span>
-                    <a ng-bind="x.title"></a>
+                    <a href="content/attachment/{{x.id}}" target="_blank" ng-bind="x.title"></a>
                 </li>
             </ul>
+
+            <label class="empty" ng-show="contentList.length==0">暂无数据</label>
+
+            <label ng-show="!loading&&!complete" ng-click="fetchContentList()" class="btn btn-block btn-more"> 加载更多 </label>
+            <label ng-show="loading" class="btn btn-block btn-more disabled"><i class="fa fa-spin fa-refresh fa-fw"></i> 正在加载，请稍候... </label>
         </div>
     </div>
 </div>
